[package]
name = "lalrgen-macro"
version = "0.1.0"
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
edition = "2018"

[lib]
name = "lalrgen_macro"
proc-macro = true

[dependencies]
lalr = { path = "../lalr" }

itertools = "0.10.0"
proc-macro2 = "1.0.18"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
