[package]
name = "llex-derive"
version = "0.1.0"
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
edition = "2018"
license = "MIT"

[lib]
name = "llex_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.18"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

regexp2 = { path = "../regexp2" }

[dev-dependencies]
anyhow = "1.0.32"
