[package]
name = "nir"
version = "0.1.0"
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
edition = "2018"

[lib]
name = "nir"
path = "src/lib.rs"

[dependencies]
ast = { path = "ast", features = ["serde-impl"] }
diagnostic = { path = "diagnostic", features = ["json-auto"] }
irgen = { path = "irgen" }
parser = { path = "parser", features = ["serde-impl"] }
lexer = { path = "lexer", features = ["serde-impl"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
utf8-chars = "1.0"

[workspace]
members = ["ast", "diagnostic", "irgen", "lexer", "parser"]
