[package]
name = "lexer"
version = "0.1.0"
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
edition = "2018"

[lib]
name = "lexer"
path = "src/lib.rs"

[features]
serde-impl = ["serde"]

[dependencies]
llex = { path = "../../llex" }

serde = { version = "1.0", features = ["derive"], optional = true }
