[package]
name = "parser"
version = "0.1.0"
authors = ["Eric Zhao <21zhaoe@protonmail.com>"]
edition = "2018"

[lib]
name = "parser"
path = "src/lib.rs"

[features]
serde-impl = ["serde"]

[dependencies]
ast = { path = "../ast" }
lexer = { path = "../lexer" }

itertools = "0.10"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"
